# PKVault.Backend/save-infos/routes/SaveInfosRoute.cs
@@ -1,5 +1,6 @@
 using System.Net.Mime;
 using Microsoft.AspNetCore.Mvc;
+using Microsoft.AspNetCore.Mvc.ModelBinding;
 
 namespace PKVault.Backend.saveinfos.routes;
 
@@ -51,5 +52,87 @@ public class SaveInfosController(
 
         byte[] fileBytes = save.GetSaveFileData();
         return File(fileBytes, MediaTypeNames.Application.Octet, filename);
+    }
+
+    [HttpPost()]
+    [Consumes("multipart/form-data")]
+    public async Task<ActionResult<DataDTO>> Upload([BindRequired] List<IFormFile> saveFiles, [FromQuery] string[] saveFilesNames, [FromQuery] bool overwrite = false)
+    {
+        if (!sessionService.HasEmptyActionList())
+        {
+            throw new InvalidOperationException($"Empty action list is required");
+        }
+
+        if (saveFiles.Count == 0 || saveFiles.Count > 5)
+            throw new ArgumentException($"Save files upload allowed 1-5 files, received {saveFiles.Count}");
+
+        if (saveFiles.Count != saveFilesNames.Length)
+            throw new ArgumentException($"Save files length != names list length - {saveFiles.Count}/{saveFilesNames.Length}");
+
+        DataUpdateFlags flags = new();
+
+        List<string> savePaths = [];
+
+        for (var i = 0; i < saveFiles.Count; i++)
+        {
+            var saveFile = saveFiles[i];
+            var filename = saveFilesNames[i];
+            ArgumentException.ThrowIfNullOrWhiteSpace(filename);
+
+            byte[] fileBytes;
+            using (var ms = new MemoryStream())
+            {
+                await saveFile.CopyToAsync(ms);
+                fileBytes = ms.ToArray();
+            }
+
+            var save = await savesLoadersService.CheckSaveData(fileBytes, filename, overwrite);
+            ArgumentException.ThrowIfNullOrWhiteSpace(save.Metadata.FilePath);
+            savePaths.Add(save.Metadata.FilePath);
+
+            flags.SaveInfos = true;
+            flags.Saves.UseSave(save.Id).SavePkms.All = true;
+            flags.Saves.UseSave(save.Id).SaveBoxes = true;
+            flags.Dex.All = true;
+        }
+
+        for (var i = 0; i < saveFiles.Count; i++)
+        {
+            var saveFile = saveFiles[i];
+            var savePath = savePaths[i];
+
+            byte[] fileBytes;
+            using (var ms = new MemoryStream())
+            {
+                await saveFile.CopyToAsync(ms);
+                fileBytes = ms.ToArray();
+            }
+
+            await savesLoadersService.UploadSaveWithoutCheck(savePath, fileBytes);
+        }
+
+        await savesLoadersService.Setup(flags);
+
+        return await dataService.CreateDataFromUpdateFlags(flags);
+    }
+
+    [HttpDelete()]
+    public async Task<ActionResult<DataDTO>> Delete([BindRequired] string path)
+    {
+        if (!sessionService.HasEmptyActionList())
+        {
+            throw new InvalidOperationException($"Empty action list is required");
+        }
+
+        ArgumentException.ThrowIfNullOrWhiteSpace(path);
+
+        DataUpdateFlags flags = new();
+
+        var deleted = savesLoadersService.DeleteSave(path, flags);
+
+        if (deleted)
+            await savesLoadersService.Setup(flags);
+
+        return await dataService.CreateDataFromUpdateFlags(flags);
     }
 }
